--- a/QuantifyThisAndroid/res/values/strings.xml
+++ b/QuantifyThisAndroid/res/values/strings.xml
@@ -7,5 +7,11 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Quantify This</string>
     <string name="button_mark_mood_label">Mark Mood</string>
+    <string name="button_next_step_label">Next</string>
+    <string name="mood_label_1">mood 1</string>
+	<string name="mood_label_2">mood 2</string>
+	<string name="mood_label_3">mood 3</string>
+	<string name="mood_label_4">mood 4</string>
+	<string name="mood_label_5">mood 5</string>
 
 </resources>
