--- a/QuantifyThisAndroid/res/values/strings.xml
+++ b/QuantifyThisAndroid/res/values/strings.xml
@@ -20,5 +20,17 @@
 	<string name="mood_label_5">mood 5</string>
 	<string name="sleep_hours_label">Hours Slept?</string>
 	<string name="sleep_efficiency_label">Rested?</string>
+	<string name="label_statistics">Statistics</string>
+	
+	<string name="settings_label">Settings</string>
+	<string name="notifications_settings_label">Notifications</string>
+	<string name="account_settings_label">Account</string>
+	<string name="general_category_label">General</string>
+	<string name="pref_notifications_enabled_title">Notifications?</string>
+	<string name="pref_notifications_enabled_summary">Check this if you want to enable notifications</string>
+	<string name="pref_notifications_agenda_mode_title">Agenda mode</string>
+	<string name="pref_notifications_agenda_mode_summary">Bug me when a new appointment in the agenda is going on</string>
+	<string name="pref_notifications_list_amount_title">Notifications amount</string>
+	<string name="pref_notifications_list_amount_summary">Select the amount of times per day you want to be notified</string>
 
 </resources>
