--- a/QuantifyThisAndroid/res/values/strings.xml
+++ b/QuantifyThisAndroid/res/values/strings.xml
@@ -23,7 +23,8 @@
 	<string name="label_statistics">Statistics</string>
 	
 	<string name="settings_label">Settings</string>
-	<string name="notifications_settings_label">Notifications</string>
+	<string name="notifications_settings_title">Notifications</string>
+	<string name="notifications_settings_summary">Setup the amount of times you want to be notified</string>
 	<string name="account_settings_label">Account</string>
 	<string name="general_category_label">General</string>
 	<string name="pref_notifications_enabled_title">Notifications?</string>
