--- a/QuantifyThisAndroid/res/values/strings.xml
+++ b/QuantifyThisAndroid/res/values/strings.xml
@@ -9,10 +9,12 @@
     <string name="title_activity_main">Quantify This</string>
     <string name="button_input_mood_label">Mark</string>
     <string name="button_mark_mood_label">Mark mood</string>
+    <string name="button_done">Done</string>
     <string name="button_agenda_mood_label">Appointments mood</string>
     <string name="button_statistics_label">Statistics</string>
     <string name="button_settings_label">Settings</string>
-    
+    <string name="shake_instructions">Hold your finger to your neck and shake the phone with your pulse rate. You can stop when the phone vibrates.</string>
+
     <string name="mood_label_1">Happy</string>
 	<string name="mood_label_2">Sad</string>
 	<string name="mood_label_3">Angry</string>
