a bit of work on getting the location for the weather api

--- a/QuantifyThisAndroid/res/values/strings.xml
+++ b/QuantifyThisAndroid/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="button_input_mood_label">Mark</string>
     <string name="button_mark_mood_label">Mark mood</string>
     <string name="button_done">Done</string>
+    <string name="button_sleep">Sleep</string>
+    <string name="button_heart_rate">Heart rate</string>
     <string name="button_agenda_mood_label">Appointments mood</string>
     <string name="button_statistics_label">Statistics</string>
     <string name="button_settings_label">Settings</string>
