--- a/QuantifyThisAndroid/res/values/strings.xml
+++ b/QuantifyThisAndroid/res/values/strings.xml
@@ -46,4 +46,8 @@
 	<string name="pref_agenda_account_list_summary">Set the google calendar account to be used.</string>
 	<string name="agenda_settings_title">Agenda</string>
 	<string name="agenda_settings_summary">Setup account and dsiplay details for the agenda view.</string>
+
+    <!--App configuration (api keys, urls, constants) -->
+    <string name="appengine_url">http://localhost:8080</string>
+    <string name="yahoo_api_key">dj0yJmk9OTFZSWlwM29rWVRFJmQ9WVdrOWVYQnNVMUZoTjJrbWNHbzlOakV4TnpNMk9UWXkmcz1jb25zdW1lcnNlY3JldCZ4PTky</string>
 </resources>
